@@ -1,3 +1,9 @@
+2005-11-17  Alexandre Oliva  <aoliva@redhat.com>
+
+	* config/tc-ppc.c (ppc_frob_file_before_adjust): Do not reference
+	dotname.
+	* write.c (write_object_file): Do not remove used weakrefd.
+
 2005-11-17  Jan Beulich  <jbeulich@novell.com>
 
 	* dw2gencfi.c (dot_cfi): Put argument parsing for cases
